--- a/package.json
+++ b/package.json
@@ -26,5 +26,11 @@
     "bluebird": "^3.5.0",
     "fontmin": "^0.9.6",
     "loader-utils": "^1.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.3.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1"
   }
 }
